Fix header item color contrast

--- a/src/_config.scss
+++ b/src/_config.scss
@@ -276,7 +276,7 @@ $header-item-padding-y: 1 !default;
 $header-item-padding-x: 2 !default;
 $header-item-margin-y: 0 !default;
 $header-item-margin-x: 1 !default;
-$header-item-color: #777777 !default;
+$header-item-color: #595959 !default;
 $header-item-active-color: $header-color !default;
 $header-item-background-color: transparent !default;
 $header-item-active-background-color: transparent !default;
